Git_WGBH_QC/src/objects/Bequest__c.object
<CustomObject>
    <fields>
        <fullName>bequest_seq__c</fullName>
        <description>Bequest Seq</description>
        <inlineHelpText>SEQ, Unique Identifier from TA or going forward it will be a unique ID to associate to the payment</inlineHelpText>
        <label>Sequence #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bequest_sts__c</fullName>
        <description>Bequest Status</description>
        <inlineHelpText>Bequest- Planned Gift Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate in Probate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bequest_sts_value__c</fullName>
        <description>Bequest Status Value</description>
        <inlineHelpText>Bequest Status Value</inlineHelpText>
        <label>Bequest Status Value</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>capital_gain_income__c</fullName>
        <description>Capital Gain Income</description>
        <inlineHelpText>Capital Gain Income</inlineHelpText>
        <label>Capital Gain Income</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cost_basis__c</fullName>
        <description>Cost Basis</description>
        <inlineHelpText>Original value of the stock/asset.</inlineHelpText>
        <label>Cost Basis</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_estate_closed__c</fullName>
        <description>Date Estate Closed</description>
        <inlineHelpText>Date Estate Closed</inlineHelpText>
        <label>Date Estate Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_final_acct_rcvd__c</fullName>
        <description>Date Final Acct Rcvd</description>
        <inlineHelpText>Date Final Acct Rcvd</inlineHelpText>
        <label>Date Final Acct Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_will_executed__c</fullName>
        <description>Date Will Executed</description>
        <inlineHelpText>Date Will Executed</inlineHelpText>
        <label>Date Will Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>deferred_to_date__c</fullName>
        <description>Deferred To Date</description>
        <inlineHelpText>Deferred To Date</inlineHelpText>
        <label>Deferred To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>discount_date_month__c</fullName>
        <description>Discount Date Month</description>
        <inlineHelpText>Discount Date = Month Only, there is not a day associated with this, usually a month and year</inlineHelpText>
        <label>Discount Date Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>discount_rate__c</fullName>
        <description>Discount Rate</description>
        <inlineHelpText>Discount Rate</inlineHelpText>
        <label>Discount Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>expected_amount__c</fullName>
        <description>Expected Amount</description>
        <inlineHelpText>Expected Amount</inlineHelpText>
        <label>Expected Amount $</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>expected_gift_date__c</fullName>
        <description>Expected Gift Date</description>
        <inlineHelpText>Expected Gift Date</inlineHelpText>
        <label>Expected Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>final_acct_requested_date__c</fullName>
        <description>Final Acct Requested Date</description>
        <inlineHelpText>Final Acct Requested Date</inlineHelpText>
        <label>Final Acct Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fund__c</fullName>
        <inlineHelpText>Detail on the fund type for the opportunity i.e. Mr and Mrs Test Endowed Fund for the Humanities or the Arts</inlineHelpText>
        <label>Fund</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gift_received_date__c</fullName>
        <description>Gift Received Date</description>
        <inlineHelpText>Gift Received Date</inlineHelpText>
        <label>Gift Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>giving_vehicle__c</fullName>
        <label>Giving Vehicle</label>
        <picklist>
            <picklistValues>
                <fullName>Bequest (BEQ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Gift Annuity (CGA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Lead Annuity Trust (CLAT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Lead Unitrust (CLU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Rem. Annuity Trust (CRAT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Rem. Unitrust (CRU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Gift Annuity (DGA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Estate (LE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance (LI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooled Income Fund (PIF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced Income Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bequest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Gift Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Lead Annuity Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Lead Unitrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Rem. Annuity Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Rem. Unitrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Gift Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth Income Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Income Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooled Income Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Plans (RP)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>giving_vehicle_value__c</fullName>
        <description>Giving Vehicle</description>
        <inlineHelpText>Giving Vehicle</inlineHelpText>
        <label>Giving Vehicle Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inventory_amount__c</fullName>
        <description>Inventory Amount</description>
        <inlineHelpText>Inventory Amount</inlineHelpText>
        <label>Inventory Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inventory_requested_date__c</fullName>
        <description>Inventory Requested Date</description>
        <inlineHelpText>Inventory Requested Date</inlineHelpText>
        <label>Inventory Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>life_ins_current_cash_value__c</fullName>
        <description>Life Ins Current Cash Value</description>
        <inlineHelpText>Life Ins Current Cash Value</inlineHelpText>
        <label>Life Ins Current Cash Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>life_ins_death_benefit_amount__c</fullName>
        <description>Life Ins Death Benefit Amount</description>
        <inlineHelpText>Life Ins Death Benefit Amount</inlineHelpText>
        <label>Life Ins Death Benefit Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>life_ins_death_benefit_date__c</fullName>
        <description>Life Ins Death Benefit Date</description>
        <inlineHelpText>Life Ins Death Benefit Date</inlineHelpText>
        <label>Life Ins Death Benefit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>life_ins_number_of_years__c</fullName>
        <description>Life Ins Number Of Years</description>
        <inlineHelpText>Life Ins Number Of Years</inlineHelpText>
        <label>Life Ins Number Of Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>life_insurance_company__c</fullName>
        <description>Life Insurance Company</description>
        <inlineHelpText>Life Insurance Company</inlineHelpText>
        <label>Life Insurance Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name_id__c</fullName>
        <description>Name Id</description>
        <inlineHelpText>Name Id</inlineHelpText>
        <label>Name Id</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_frequency__c</fullName>
        <description>Payment Frequency</description>
        <inlineHelpText>Payment Frequency</inlineHelpText>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment_frequency_value__c</fullName>
        <label>Payment Frequency Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment (Complimentary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Pal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Funds Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment_method_value__c</fullName>
        <description>Payment Method</description>
        <inlineHelpText>Payment Method</inlineHelpText>
        <label>Payment Method Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>policy_number__c</fullName>
        <description>Policy Number</description>
        <inlineHelpText>Policy Number</inlineHelpText>
        <label>Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>premium_payment_amount__c</fullName>
        <description>Premium Payment Amount</description>
        <inlineHelpText>Premium Payment Amount</inlineHelpText>
        <label>Premium Payment Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>probate_date__c</fullName>
        <description>Probate Date</description>
        <inlineHelpText>Probate Date</inlineHelpText>
        <label>Probate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>received_amount__c</fullName>
        <description>Received Amount</description>
        <inlineHelpText>Gift Received Amount</inlineHelpText>
        <label>Received Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>recip_account_id__c</fullName>
        <description>Recip Account Id</description>
        <inlineHelpText>Recip Account Id</inlineHelpText>
        <label>Recip Account Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recip_name_id__c</fullName>
        <description>Recip Name Id</description>
        <inlineHelpText>Recip Name Id</inlineHelpText>
        <label>Recip Name Id</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>remainder_value__c</fullName>
        <description>Remainder Value</description>
        <inlineHelpText>IRS Remainder Amount = Charitable Deduction</inlineHelpText>
        <label>IRS Remainder Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>remainderman_percent__c</fullName>
        <description>Percent to WGBH</description>
        <inlineHelpText>Percent to WGBH</inlineHelpText>
        <label>WGBH Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>revocable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check if it is a revocable charitable item</inlineHelpText>
        <label>Revocable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>Source</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sts__c</fullName>
        <label>Sts</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>term_years__c</fullName>
        <description>Term Years</description>
        <inlineHelpText>Term Years</inlineHelpText>
        <label>Term Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trust_market_value__c</fullName>
        <description>Trust Market Value</description>
        <inlineHelpText>Trust Market Value</inlineHelpText>
        <label>Trust Market Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trust_value_date__c</fullName>
        <description>Trust Value Date</description>
        <inlineHelpText>Trust Value Date</inlineHelpText>
        <label>Trust Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>will_drafted_date__c</fullName>
        <description>Will Drafted Date</description>
        <inlineHelpText>Will Drafted Date</inlineHelpText>
        <label>Will Drafted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>will_received_date__c</fullName>
        <description>Will Received Date</description>
        <inlineHelpText>Will Received Date</inlineHelpText>
        <label>Will Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>will_requested_date__c</fullName>
        <description>Will Requested Date</description>
        <inlineHelpText>Will Requested Date</inlineHelpText>
        <label>Will Requested Date</label>
        <type>Date</type>
    </fields>
    <label>Planned Giving</label>
    <listViews>
        <fullName>All_Bequests</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.BEQ</value>
        </filters>
        <label>All Bequests</label>
    </listViews>
    <listViews>
        <fullName>All_CGA</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.CGA</value>
        </filters>
        <label>All CGA</label>
    </listViews>
    <listViews>
        <fullName>All_CLAT</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>giving_vehicle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.CLAT</value>
        </filters>
        <label>All CLAT</label>
    </listViews>
    <listViews>
        <fullName>All_CLUT</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.CLUT</value>
        </filters>
        <label>All CLUT</label>
    </listViews>
    <listViews>
        <fullName>All_CRAT</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.CRAT</value>
        </filters>
        <label>All CRAT</label>
    </listViews>
    <listViews>
        <fullName>All_CRUT</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.CRUT</value>
        </filters>
        <label>All CRUT</label>
    </listViews>
    <listViews>
        <fullName>All_Life_Estate</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.LE</value>
        </filters>
        <label>Retained Life Estate</label>
    </listViews>
    <listViews>
        <fullName>All_Life_Insurance</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.Life_Insurance</value>
        </filters>
        <label>All Life Insurance</label>
    </listViews>
    <listViews>
        <fullName>All_PIF</fullName>
        <columns>NAME</columns>
        <columns>Account_Alpha_Name__c</columns>
        <columns>source__c</columns>
        <columns>activity_type__c</columns>
        <columns>fund__c</columns>
        <columns>Gift_amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Bequest__c.PIF</value>
        </filters>
        <label>All PIF</label>
    </listViews>
    <nameField>
        <label>Planned Giving Title (Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Giving</pluralLabel>
    <recordTypes>
        <fullName>BEQ</fullName>
        <active>true</active>
        <description>Planned Giving</description>
        <label>Bequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>CGA</fullName>
        <active>true</active>
        <description>Charitable Gift Annuity</description>
        <label>Charitable Gift Annuity</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLAT</fullName>
        <active>true</active>
        <description>Charitable Lead Annuity Trust</description>
        <label>Charitable Lead Annuity Trust</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLUT</fullName>
        <active>true</active>
        <description>Charitable Lead Unitrust</description>
        <label>Charitable Lead Uni Trust</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRAT</fullName>
        <active>true</active>
        <description>Charitable Remainder Annuity Trust</description>
        <label>Charitable Remainder Annuity Trust</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRUT</fullName>
        <active>true</active>
        <description>Charitable Rem. Unitrust</description>
        <label>Charitable Rem. Unitrust</label>
    </recordTypes>
    <recordTypes>
        <fullName>DGA</fullName>
        <active>true</active>
        <description>Deferred Gift Annuity</description>
        <label>Deferred Gift Annuity</label>
    </recordTypes>
    <recordTypes>
        <fullName>LE</fullName>
        <active>true</active>
        <description>Retained Life Estate</description>
        <label>Retained Life Estate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Life_Insurance</fullName>
        <active>true</active>
        <description>Life Insurance Bequest</description>
        <label>Life Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIF</fullName>
        <active>true</active>
        <description>Pooled Income Fund</description>
        <label>Pooled Income Fund</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>